[Changes 1.2c01]

* Apply fixes from darkfires removing non-standard use of arithmetic on
  void * values, to allow building on Irix. (caf)

* Apply fix from darkfires to allow building with ICC. (caf)

* Show correct message when a socket connection is closed cleanly. (caf)

* Add /FSET WHOIS_CALLERID for +g mode notification on hybrid & ratbox. (caf)

* Build script fix to allow plugins to build on x86-64. (caf)

* Correct count in /CLONES (reported by t3gah), and format output nicely
  using an /fset. (caf)

* Add definition of BIND_8_COMPAT to fix build problem on Mac OS X. (caf)

* Ensure that SHOW_AWAY_ONCE doesn't hide away status in /whois output. (caf)

* Fix the the -z command line option for specifying username. (flashback)

* Fix up /WILN, /WILC and /WILCR. (caf)

* Backport changes from epic5 to make recv_nick, sent_nick and sent_body 
  per-server, and apply new version of do_oops from flashback. This means
  that /oops, "/query .", "/query ,", "/msg ." and "/msg ," are per-server,
  along with the $. $, and $B aliases. (caf)

* Handle error return from getcwd() in /cd. (caf)

* Fix alloca warnings on freebsd. (caf)

* Fix memory leak in banlist.c. (caf)

* Apply a fix contributed by cpet for the configure script on
  FreeBSD 9. (caf)

* Fix a refcounting issue in the whowas list handling, which should make
  the listing of users that left in a netsplit right again. (caf)

* Improve argument-handling in /hostname command - now supports doing
  /hostname 2 to switch to second vhost. (caf)

* Change the display of server stats so that the averages (eg. users per
  channel) are correctly rounded. (caf)

* Reinstate RPL_WHOISACTUALLY / RPL_WHOISHOST numerics - things seem to have
  stabilised in the ircd world on this. (caf)

* Fixed two cases where the client was incorrectly deciding that a numeric
  originated from a remote server rather than the local server - this caused
  BitchX to falsely report channel desynch and incorrectly hide some