@@ -118,7 +118,7 @@ ChannelList *	BX_prepare_command (int *, char *, int);
 
 	int		timer_unban (void *, char *);
 	void		check_server_connect (int);
-	char		*country(char *);
+	const char	*country(char *);
 	int		do_newuser (char *, char *, char *);
 	int		char_fucknut (register unsigned char *, char, int);
 	BanList		*ban_is_on_channel(register char *, register ChannelList *);
